<resources>
    <string name="app_name">BAIT2073MAD</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_account">Account</string>

    <!-- login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="doNotHaveAcc">Don\'t have account?</string>
    <string name="signUp">\u0020Sign up\u0020</string>
    <string name="now">now</string>

    <!-- sign up -->
    <string name="createAccount">Create Account</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="agreeCondition">I agree with terms and conditions</string>
    <string name="signUpButton">Sign Up</string>
    <string name="login_now">Login now</string>

    <!-- account -->
    <string name="logout">Logout</string>

    <!-- edit profile -->
    <string name="editProfileUsername">Username</string>
    <string name="editProfileAddress">Address</string>
    <string name="save">Save</string>

    <!-- cart -->
    <string name="cart">Cart</string>
    <string name="selectAll">Select All</string>
    <string name="addressTitle">Delivery Address</string>
    <string name="address">ADDRESS</string>
    <string name="statusTitle">Status:</string>
    <string name="orderIDTitle">Order ID:</string>
    <string name="orderDateTitle">Order Date:</string>
    <string name="paymentMethodTitle">Payment Method:</string>
    <string name="totalPaymentTitle">Total Payment:</string>
    <string name="noRecord">No Record!</string>
    <string name="delete_record">Delete this Cart Item?</string>
    <string name="total">Total: </string>

    <!-- product -->
    <string name="product_id_label">Product ID</string>
    <string name="product_name_label">Product Name</string>
    <string name="product_price_label">Product Price</string>
    <string name="product_status_label">Product Status</string>
    <string-array name="product_status_list">
        <item>Brand New</item>
        <item>Like New</item>
        <item>Lightly Used</item>
        <item>Well Used</item>
        <item>Heavy Used</item>
    </string-array>
    <string name="product_seller_label">Product Seller</string>
    <string name="product_descriptions_label">Product Descriptions</string>
    <string name="no_product">No Product</string>
    <string name="no_product_image">No Product Image</string>
    <string name="save_product">Save Product</string>
    <string name="add_product">Add Product</string>
    <string name="product_saved">Product Saved</string>
    <string name="product_not_saved">Product Not Saved</string>
    <string name="currency_myr">RM</string>

    <!-- search -->
    <string name="search_query_hint">Search Products!</string>

    <!-- check out -->
    <string name="titleCheckOut">Check Out</string>
    <string name="placeOrderButton">Place Order</string>
    <string name="productQuantity">Product Quantity</string>
    <string name="labelVoucher">Apply Voucher</string>
    <string name="totalCartItemInCheckOut">Total Items: </string>
    <string name="DeliveryAddress">Delivery Address: </string>
    <string name="checkOutRemark">Remark: </string>
    <string name="applyVoucherButton">Apply Voucher</string>
    <string name="paymentMethodButton">Payment Method</string>
    <string name="labelVoucherApplied">"Voucher Apply: "</string>
    <string name="labelChosenPaymentMethod">"Card Number: "</string>
    <string name="labelSubtotal">Subtotal Price(RM): </string>
    <string name="labelShippingFee">Shipping Fee:RM):  </string>
    <string name="labelVoucherDiscount">Voucher Discount(RM): </string>
    <string name="labelTotalPayment">Total Payment(RM): </string>

    <!-- voucher -->
    <string name="titleVoucher">Select Voucher</string>
    <string name="okButton">OK</string>
    <string name="voucherName">Voucher Name</string>
    <string name="voucherExpired">Voucher Expired Date</string>
    <string name="labelVoucherExpiredDate">Expired Date: </string>
    <string name="voucherTermsCondition">Terms and Conditions</string>
    <string name="labelShippingVoucher">Voucher(s) can be selected: </string>
    <string name="voucherCodeHint">Enter Voucher Code</string>
    <string name="noVoucherMsg">No voucher available!</string>

    <!-- payment method -->
    <string name="titlePaymentMethod">Payment Method</string>
    <string name="textOnlinePaymentMethod">Online Payment</string>
    <string name="labelCardPaymentMethod">Credit/Debit Card</string>
    <string name="textCashPayment">Cash Payment</string>
    <string name="labelConfirmPaymentMethodButton">Confirm</string>
    <string name="cardNumber">Card Number: </string>
    <string name="cardHolderName">"Card Holder's Name: "</string>
    <string name="cardExpiredDay">Expired Day: </string>
    <string name="hintCardNumber">"1234 1234 1234 1234"</string>
    <string name="hintCardExpiredDay">05/26</string>
    <string name="hintCardHolderName">Chong Hao Wei</string>
    <string name="cardCvc">"CVC Number: "</string>
    <string name="hintCardCvc">123</string>
    <string name="addCard">Add Card</string>
    <string name="complete">Complete</string>
    <string name="delete">Delete</string>
    <string name="successMessage">Payment Successful!!</string>
    <string name="labelThirdParty">Successful Payment via Third Party!</string>
    <string name="backToMerchantButton">Back To Merchant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>

    <string name="labelCheckOutCount">No.</string>
    <string name="labelCheckOutName">Product Name</string>
    <string name="labelCheckOutQuantity">Quantity</string>
    <string name="labelCheckOutPrice">Price (RM)</string>
    <string name="refresh">Refresh</string>
    <string name="title_recent_order">Recent Order</string>


</resources>