<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.account.EditProfileFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEditProfileUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editProfileUsername"
            android:maxWidth="80dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/editProfileErrorMessage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/red" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEditProfileAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editProfileAddress"
            android:maxWidth="80dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/editProfileErrorMessage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/red" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/save" />

</LinearLayout>