<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.paymentMethod.PaymentMethodFragment">

    <Button
        android:id="@+id/cardButton"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="402dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:text="@string/labelCardPaymentMethod"
        app:icon="@drawable/credit_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/onlinePaymentButton"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="402dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:text="@string/textOnlinePaymentMethod"
        app:icon='@drawable/online_payment'
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardButton" />

    <Button
        android:id="@+id/cashButton"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="402dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:text="@string/textCashPayment"
        app:icon='@drawable/cash_payment'
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onlinePaymentButton" />

    <ProgressBar
        android:id="@+id/paymentProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>