<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.voucher.VoucherItemFragment">

    <ImageView
        android:id="@+id/voucherImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/voucherNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/voucherName"
        app:layout_constraintStart_toEndOf="@+id/voucherImageView"
        app:layout_constraintTop_toTopOf="@+id/voucherImageView" />

    <TextView
        android:id="@+id/voucherExpiredTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/voucherExpired"
        android:textColor="#614A4747"
        app:layout_constraintStart_toEndOf="@+id/voucherImageView"
        app:layout_constraintTop_toBottomOf="@+id/voucherNameTextView" />

    <TextView
        android:id="@+id/vouchetTermsConditionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#63EDAFC4"
        android:text="@string/voucherTermsCondition"
        app:layout_constraintStart_toEndOf="@+id/voucherImageView"
        app:layout_constraintTop_toBottomOf="@+id/voucherExpiredTextView" />

    <CheckBox
        android:id="@+id/voucherCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/voucherImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/voucherImageView" />
</androidx.constraintlayout.widget.ConstraintLayout>